SAF経由でファイルアクセスする場合、権限要求は不要だったのでコードを削除
ついでにAndroid 4.x用のコードも削除

refs #322

--- a/Yukari/src/main/res/layout/activity_backup.xml
+++ b/Yukari/src/main/res/layout/activity_backup.xml
@@ -38,7 +38,7 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="実行"
+            android:text="フォルダを選択して実行"
             android:id="@+id/btnExecute"
             android:layout_gravity="center_horizontal"
             />
