--- a/Yukari/src/main/res/drawable/selector_key_light_background.xml
+++ b/Yukari/src/main/res/drawable/selector_key_light_background.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:state_pressed="true"
-        android:drawable="@drawable/press_key_light_color"/>
-    <item
-        android:state_focused="true"
-        android:drawable="@drawable/focus_key_light_color"/>
-    <item
-        android:drawable="@android:color/transparent"/>
-</selector>
+<!-- Android 5.0以降では標準のRippleにする -->
+<inset xmlns:android="http://schemas.android.com/apk/res/android"
+    android:drawable="?android:attr/selectableItemBackground">
+</inset>
