--- a/Yukari/src/main/res/values/styles.xml
+++ b/Yukari/src/main/res/values/styles.xml
@@ -26,7 +26,10 @@
         <item name="android:activityCloseExitAnimation">@anim/activity_tweet_close_exit</item>
     </style>
 
-    <style name="AppThemeTranslucent" parent="android:Theme.Holo.Light.NoActionBar">
+    <style name="AppThemeTranslucent" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:colorPrimary">@color/key_color</item>
+        <item name="android:colorPrimaryDark">@color/key_color_2</item>
+        <item name="android:colorAccent">@color/key_color_accent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="tweetTextColor">#000</item>
@@ -38,7 +41,10 @@
         <item name="tweetMention">@drawable/bg_mention</item>
     </style>
 
-    <style name="AppThemeTranslucent.Dark" parent="android:Theme.Holo.NoActionBar">
+    <style name="AppThemeTranslucent.Dark" parent="android:Theme.Material.NoActionBar">
+        <item name="android:colorPrimary">@color/key_color</item>
+        <item name="android:colorPrimaryDark">@color/key_color_2</item>
+        <item name="android:colorAccent">@color/key_color_accent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="tweetTextColor">#000</item>
@@ -62,7 +68,10 @@
         <!--<item name="actionBarWidgetTheme">@style/YukariDarkTheme</item>-->
     </style>
 
-    <style name="YukariAboutTheme" parent="ColorsTheme.Light"/>
+    <style name="YukariAboutTheme" parent="ColorsTheme.Light">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+    </style>
 
     <style name="Yukari.TextAppearance.TabTitle" parent="TextAppearance.AppCompat.Medium.Inverse">
         <item name="android:textColor">#ccc</item>
