--- a/Yukari/src/main/res/layout/menu_profile_manage_follow.xml
+++ b/Yukari/src/main/res/layout/menu_profile_manage_follow.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <shibafu.yukari.view.MaterialProgressBar
+    <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="36dp"
         android:layout_height="36dp"
