--- a/Yukari/src/main/res/layout/row_loading.xml
+++ b/Yukari/src/main/res/layout/row_loading.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <shibafu.yukari.view.MaterialProgressBar
+    <ProgressBar
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
