--- a/Yukari/src/main/res/layout/activity_tweet.xml
+++ b/Yukari/src/main/res/layout/activity_tweet.xml
@@ -49,7 +49,7 @@
         android:layout_below="@+id/llTweetInput"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/tlTweetAction"
-        android:text="Tweet" />
+        android:text="Post" />
 
     <TextView
         android:id="@+id/tvTweetCount"
@@ -212,7 +212,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Tweet"
+        android:text="New post"
         android:ellipsize="end"/>
 
     <ImageView
