--- a/Yukari/src/main/res/xml/pref_appearance.xml
+++ b/Yukari/src/main/res/xml/pref_appearance.xml
@@ -57,8 +57,8 @@
             android:summary="投稿画面を呼び出すボタンを表示します"/>
         <CheckBoxPreference
             android:key="pref_disable_tweet_gesture"
-            android:title="ツイートジェスチャーを無効化"
-            android:summary="ツイート画面をスライドで開くジェスチャーを無効にします\n投稿ボタンを表示している場合に限り設定できます"
+            android:title="投稿ジェスチャーを無効化"
+            android:summary="投稿画面をスライドで開くジェスチャーを無効にします\n投稿ボタンを表示している場合に限り設定できます"
             android:dependency="pref_show_tweetbutton"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="タイムライン">
@@ -68,19 +68,19 @@
             android:summary="表示をスクリーンネームと本文だけにします"/>
         <ListPreference
             android:key="pref_mode_multiline"
-            android:title="複数行ツイートの表示方法"
-            android:summary="改行を含むツイートを省略する設定をします"
+            android:title="複数行投稿の表示方法"
+            android:summary="改行を含む投稿を省略する設定をします"
             android:entries="@array/pref_mode_multiline_entries"
             android:entryValues="@array/pref_mode_multiline_values"
             android:defaultValue="0"/>
         <CheckBoxPreference
             android:key="pref_shorten_repeat_text"
-            android:title="反復ツイートの圧縮"
-            android:summary="4行以上同じ文章が続いているツイートを圧縮します"/>
+            android:title="反復された本文の圧縮"
+            android:summary="4行以上同じ文章が続いている投稿を圧縮します"/>
         <CheckBoxPreference
             android:key="pref_prev_enable"
             android:title="サムネイルを表示"
-            android:summary="ツイートに含まれるメディアのサムネイルを表示します"
+            android:summary="投稿に含まれるメディアのサムネイルを表示します"
             android:defaultValue="true"/>
         <Preference
             android:key="pref_prev_time"
@@ -94,7 +94,7 @@
         <CheckBoxPreference
             android:key="pref_prev_ignore_censored"
             android:title="メディアの閲覧注意フラグを無視"
-            android:summary="ツイートに含まれるメディアに対して閲覧注意フラグが設定されていても、サムネイルを隠さないようにします"/>
+            android:summary="投稿に含まれるメディアに対して閲覧注意フラグが設定されていても、サムネイルを隠さないようにします"/>
         <CheckBoxPreference
             android:key="pref_show_load_more_user"
             android:title="more行に対応するアカウントを表示"
@@ -103,18 +103,18 @@
     <PreferenceCategory android:title="タイムライン (Mastodon)">
         <CheckBoxPreference
             android:key="pref_always_expand_cw"
-            android:title="閲覧注意トゥートを常に展開"
-            android:summary="トゥートに閲覧注意(CW)が設定されていても、常に全文表示するようにします"/>
+            android:title="閲覧注意を常に展開"
+            android:summary="投稿に閲覧注意フラグ(CW)が設定されていても、常に全文表示するようにします"/>
         <CheckBoxPreference
             android:key="pref_compress_acct"
             android:title="ホスト名を省略表示"
             android:summary="Acctのホスト名部分を省略します。"/>
     </PreferenceCategory>
-    <PreferenceCategory android:title="ツイート詳細画面">
+    <PreferenceCategory android:title="投稿詳細画面">
         <CheckBoxPreference
             android:key="pref_bottom_stack"
             android:title="メニューを下に寄せる"
-            android:summary="ツイート詳細画面のメニューを下寄せにします"/>
+            android:summary="投稿詳細画面のメニューを下寄せにします"/>
         <CheckBoxPreference
             android:key="pref_too_late_delete_message"
             android:title="削除メッセージをておくれさせる"
