--- a/Yukari/src/main/res/xml/pref_dialog.xml
+++ b/Yukari/src/main/res/xml/pref_dialog.xml
@@ -18,11 +18,11 @@
     <CheckBoxPreference
         android:key="pref_dialog_post"
         android:title="投稿前に確認"
-        android:summary="ツイート前に実行するか確認を行います" />
+        android:summary="投稿前に本当に実行するか確認を行います" />
     <CheckBoxPreference
         android:key="pref_dialog_cancel_post"
         android:title="投稿画面を閉じる前に確認"
-        android:summary="ツイートキャンセル前に下書きに保存するか確認を行います"
+        android:summary="投稿キャンセル前に下書きに保存するか確認を行います"
         android:defaultValue="true"/>
     <CheckBoxPreference
         android:key="pref_dialog_swipe"
