--- a/Yukari/src/main/res/xml/pref_post.xml
+++ b/Yukari/src/main/res/xml/pref_post.xml
@@ -20,7 +20,7 @@
         <EditTextPreference
             android:key="pref_tweet_footer"
             android:title="フッター設定"
-            android:summary="ツイート末尾に自動挿入する文字列を設定します"/>
+            android:summary="投稿の末尾に自動挿入する文字列を設定します"/>
         <EditTextPreference
             android:key="pref_quote_comment_footer"
             android:title="RTしてから言及のフッター"
