--- a/Yukari/src/main/res/layout-land/activity_status.xml
+++ b/Yukari/src/main/res/layout-land/activity_status.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginRight="6dp"
-                android:text="0RT 0Fav"
+                android:text="0BT 0Fav"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ff8b8b8b"
                 android:visibility="gone" />
