--- a/Yukari/src/main/res/xml/pref_dialog.xml
+++ b/Yukari/src/main/res/xml/pref_dialog.xml
@@ -7,13 +7,13 @@
         android:defaultValue="false"/>
     <CheckBoxPreference
         android:key="pref_dialog_rt"
-        android:title="リツイート"
-        android:summary="リツイート前に実行するか確認を行います"
+        android:title="ブースト"
+        android:summary="ブースト前に実行するか確認を行います"
         android:defaultValue="true"/>
     <CheckBoxPreference
         android:key="pref_dialog_favrt"
-        android:title="お気に入りに登録してRT"
-        android:summary="お気に入りに登録してRTする前に実行するか確認を行います"
+        android:title="お気に入りに登録してBT"
+        android:summary="お気に入りに登録してBTする前に実行するか確認を行います"
         android:defaultValue="true"/>
     <CheckBoxPreference
         android:key="pref_dialog_post"
