--- a/Yukari/src/main/res/layout/row_follow.xml
+++ b/Yukari/src/main/res/layout/row_follow.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="4dp"
     android:paddingRight="4dp"
     android:paddingTop="6dp"
