--- a/Yukari/src/main/res/menu/follow.xml
+++ b/Yukari/src/main/res/menu/follow.xml
@@ -2,10 +2,14 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_block"
-        android:title="ブロックする" />
+        android:title="@string/follow_control_block" />
     <item android:id="@+id/action_cutoff"
         android:visible="false"
         android:title="ブロブロ解除" />
     <item android:id="@+id/action_report"
+        android:visible="false"
         android:title="スパム報告" />
+    <item android:id="@+id/action_remove"
+        android:visible="false"
+        android:title="@string/follow_control_remove_from_followers" />
 </menu>
