--- a/Yukari/src/main/res/xml/pref_expert.xml
+++ b/Yukari/src/main/res/xml/pref_expert.xml
@@ -85,5 +85,9 @@
             android:key="pref_indicate_loading_from_remote"
             android:title="画像キャッシュミスの可視化"
             android:summary="キャッシュが存在しなかった場合に、Loading画像の枠の色を変えてダウンロード中であることを示すようにします" />
+        <CheckBoxPreference
+            android:key="pref_attachment_prefer_use_get_content"
+            android:title="レガシーな添付ファイル選択画面"
+            android:summary="古いAPIを使用して添付ファイル選択画面を呼び出します\nクラウドストレージアプリ等から添付したい場合、このオプションが必要になる場合があります" />
     </PreferenceCategory>
 </PreferenceScreen>
